Adicionado botão sair form setorexcluido click em labels

--- a/Peojeto-Prog-Sistem/Peojeto-Prog-Sistem.csproj
+++ b/Peojeto-Prog-Sistem/Peojeto-Prog-Sistem.csproj
@@ -146,6 +146,43 @@
     <Compile Include="CadastroPatrimonio.Designer.cs">
       <DependentUpon>CadastroPatrimonio.cs</DependentUpon>
     </Compile>
+    <Compile Include="CadastroSetores.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="CadastroSetores.Designer.cs">
+      <DependentUpon>CadastroSetores.cs</DependentUpon>
+    </Compile>
+    <Compile Include="CadastroUsuarioPatri.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="CadastroUsuarioPatri.Designer.cs">
+      <DependentUpon>CadastroUsuarioPatri.cs</DependentUpon>
+    </Compile>
+    <Compile Include="ConsultaFornecedor.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ConsultaFornecedor.Designer.cs">
+      <DependentUpon>ConsultaFornecedor.cs</DependentUpon>
+    </Compile>
+    <Compile Include="ConsultarSetores.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ConsultarSetores.Designer.cs">
+      <DependentUpon>ConsultarSetores.cs</DependentUpon>
+    </Compile>
+    <Compile Include="ConsultarUsuarioPatri.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ConsultarUsuarioPatri.Designer.cs">
+      <DependentUpon>ConsultarUsuarioPatri.cs</DependentUpon>
+    </Compile>
+    <Compile Include="UsuarioPatri.cs" />
+    <Compile Include="CadastroUsuarioSistema.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="CadastroUsuarioSistema.Designer.cs">
+      <DependentUpon>CadastroUsuarioSistema.cs</DependentUpon>
+    </Compile>
     <Compile Include="ConsultaManutencao.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -175,6 +212,13 @@
     <Compile Include="setor.Designer.cs">
       <DependentUpon>setor.cs</DependentUpon>
     </Compile>
+    <Compile Include="StatusPatrimonio.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="StatusPatrimonio.Designer.cs">
+      <DependentUpon>StatusPatrimonio.cs</DependentUpon>
+    </Compile>
+    <Compile Include="UsuarioSistema.cs" />
     <EmbeddedResource Include="CadastroFornecedor.resx">
       <DependentUpon>CadastroFornecedor.cs</DependentUpon>
     </EmbeddedResource>
@@ -184,8 +228,26 @@
     <EmbeddedResource Include="CadastroPatrimonio.resx">
       <DependentUpon>CadastroPatrimonio.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="CadastroSetores.resx">
+      <DependentUpon>CadastroSetores.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="CadastroUsuarioPatri.resx">
+      <DependentUpon>CadastroUsuarioPatri.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="CadastroUsuarioSistema.resx">
+      <DependentUpon>CadastroUsuarioSistema.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ConsultaFornecedor.resx">
+      <DependentUpon>ConsultaFornecedor.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="ConsultaManutencao.resx">
       <DependentUpon>ConsultaManutencao.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ConsultarSetores.resx">
+      <DependentUpon>ConsultarSetores.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ConsultarUsuarioPatri.resx">
+      <DependentUpon>ConsultarUsuarioPatri.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Dashboard.resx">
       <DependentUpon>Dashboard.cs</DependentUpon>
@@ -204,6 +266,9 @@
     </Compile>
     <EmbeddedResource Include="setor.resx">
       <DependentUpon>setor.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="StatusPatrimonio.resx">
+      <DependentUpon>StatusPatrimonio.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
