--- a/Peojeto-Prog-Sistem/Peojeto-Prog-Sistem.csproj
+++ b/Peojeto-Prog-Sistem/Peojeto-Prog-Sistem.csproj
@@ -146,6 +146,12 @@
     <Compile Include="CadastroPatrimonio.Designer.cs">
       <DependentUpon>CadastroPatrimonio.cs</DependentUpon>
     </Compile>
+    <Compile Include="CadastroSetores.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="CadastroSetores.Designer.cs">
+      <DependentUpon>CadastroSetores.cs</DependentUpon>
+    </Compile>
     <Compile Include="ConsultaManutencao.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -189,6 +195,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="CadastroPatrimonio.resx">
       <DependentUpon>CadastroPatrimonio.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="CadastroSetores.resx">
+      <DependentUpon>CadastroSetores.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="ConsultaManutencao.resx">
       <DependentUpon>ConsultaManutencao.cs</DependentUpon>
